--- a/discuss-project/discuss/lib/discuss_web/controllers/topic_html/index.html.heex
+++ b/discuss-project/discuss/lib/discuss_web/controllers/topic_html/index.html.heex
@@ -10,14 +10,21 @@
 <.table id="topics" rows={@topics} row_click={&JS.navigate(~p"/topics/#{&1}")}>
   <:col :let={topic} label="Title"><%= topic.title %></:col>
   <:action :let={topic}>
+    
     <div class="sr-only">
       <.link navigate={~p"/topics/#{topic}"}>Show</.link>
+    
     </div>
+    
+    <%= if @conn.assigns.user.id == do  %>
     <.link navigate={~p"/topics/#{topic}/edit"}>Edit</.link>
+    <% end %>
   </:action>
   <:action :let={topic}>
+    <%= if do %>
     <.link href={~p"/topics/#{topic}"} method="delete" data-confirm="Are you sure?">
       Delete
     </.link>
+    <% end %>
   </:action>
 </.table>
